# ch8-isa

./: Cargo.toml  README.md
src/: lib.rs
src/codegen/: binary.rs  codegen.rs  instruction.rs  mod.rs
src/data/: add_data.rs  and_data.rs  bcd_data.rs  call_data.rs  cls_data.rs  draw_data.rs  gdl_data.rs  jmp_data.rs  jpc_data.rs  key_data.rs  mod.rs  mov_data.rs  or_data.rs  rand_data.rs  rdp_data.rs  register.rs  ret_data.rs  rld_data.rs  sch_data.rs  sdl_data.rs  shl_data.rs  shr_data.rs  skip_data.rs  skiptype.rs  snd_data.rs  sub_data.rs  subn_data.rs  xor_data.rs
src/error/: binary_error.rs  binary_error_type.rs  mod.rs
tests/: test_binary_creation.rs
