[package]
name = "ch8-isa"
version = "0.1.0"
authors = ["ahdavis <ahdavis13@gmail.com>"]
edition = "2018"
license = "LGPL-3.0+"
readme = "README.md"
description = "Chip-8 instruction set and code generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
